--- a/index.html
+++ b/index.html
@@ -1370,7 +1370,7 @@
                   <div class="icon-box-style-one-wrap">
                     <div class="icon-box-style-one">
                       <div class="icon-box-style-one-media">
-                        <img src="images/whatwe/vastu.jpg" alt="Pic4" />
+                        <img src="images/whatwe/vastu.jpeg" alt="Pic4" />
                       </div>
 
                       <div class="icon-box-one-title">
