Added frontend changes from dev branch 💻✨

--- a/contact.html
+++ b/contact.html
@@ -502,7 +502,7 @@
             </p>
             <ul class="social-icons">
               <li>
-                <a href="https://www.facebook.com/nikhar.sharma.96/">
+                <a href="https://www.facebook.com/Ar.Nikharsharma?rdid=l3QKVJyH115xQodo&share_url=https%253A%252F%252Fwww.facebook.com%252Fshare%252F1CHjd4ZUcS%252F">
                   <i class="bi bi-facebook cursor-scale small"></i>
                 </a>
               </li>
