--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                     <div class="slider2-left-sidebar-position">
                         <div class="slider2-l-social">
                             <ul class="social2-icons">
-                                <li><a class="bg-dribble-clr" href="https://www.facebook.com/nikhar.sharma.96/">facebook<i class="bi bi-facebook"></i></a></li>
+                                <li><a class="bg-dribble-clr" href="https://www.facebook.com/Ar.Nikharsharma?rdid=l3QKVJyH115xQodo&share_url=https%253A%252F%252Fwww.facebook.com%252Fshare%252F1CHjd4ZUcS%252F">facebook<i class="bi bi-facebook"></i></a></li>
                                 <li><a class="bg-behance-clr" href="https://www.instagram.com/nweaver_architect/">Instagram<i class="bi bi-instagram"></i></a></li>
                                 <li><a class="bg-twitter-clr" href="https://www.youtube.com/channel/UC0yOs9xOQ6AWxY0OPRn3Ghg">Youtube<i class="bi bi-youtube"></i></a></li>
                                 <li><a class="bg-twitter-clr" href="https://www.linkedin.com/in/ar-nikhar-sharma-505a6312b?utm_so">LinkedIn<i class="bi bi-linkedin"></i></a></li>
@@ -2483,7 +2483,7 @@
             </p>
             <ul class="social-icons">
               <li>
-                <a href="https://www.facebook.com/nikhar.sharma.96/">
+                <a href="https://www.facebook.com/Ar.Nikharsharma?rdid=l3QKVJyH115xQodo&share_url=https%253A%252F%252Fwww.facebook.com%252Fshare%252F1CHjd4ZUcS%252F">
                   <i class="bi bi-facebook cursor-scale small"></i>
                 </a>
               </li>
