--- a/project.html
+++ b/project.html
@@ -331,7 +331,7 @@
         <!-- Project 2 SECTION END -->
 
         <!-- CLIENT LOGO SECTION START -->
-        <div class="section-full Client-logo-style1-wrap">
+<!--         <div class="section-full Client-logo-style1-wrap">
           <div class="section-content">
             <div class="home-client-carousel2-wrap">
               <!-- Swiper -->
@@ -422,7 +422,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
         <!-- CLIENT LOGO  SECTION End -->
 
        
