--- a/project.html
+++ b/project.html
@@ -331,7 +331,7 @@
         <!-- Project 2 SECTION END -->
 
         <!-- CLIENT LOGO SECTION START -->
-<!--         <div class="section-full Client-logo-style1-wrap">
+        <div class="section-full Client-logo-style1-wrap">
           <div class="section-content">
             <div class="home-client-carousel2-wrap">
               <div class="swiper home-client-carousel2">
@@ -421,7 +421,7 @@
               </div>
             </div>
           </div>
-        </div> -->
+        </div>
         <!-- CLIENT LOGO  SECTION End -->
 
        
