--- a/project.html
+++ b/project.html
@@ -583,34 +583,19 @@
     <script src="js/custom.js"></script>
     <!-- CUSTOM FUCTIONS  -->
 <script>
-  let allProjects = [];
-
-  // Map category name to masonry class
-  function mapCategoryToClass(category) {
-    const categoryMap = {
-      Residential: "cat-1",
-      Commercial: "cat-2",
-      Industrial: "cat-3",
-      Architecture: "cat-4",
-      Plumbing: "cat-5",
-    };
-    return categoryMap[category] || "cat-0";
-  }
-
   // Fetch projects from backend API
   async function fetchProjects() {
     try {
       const res = await fetch("https://api.nweaverarchitect.in/project");
       const data = await res.json();
       if (!data.success) throw new Error("Failed to fetch projects");
-      allProjects = data.projects;
-      renderProjects(allProjects);
+      renderProjects(data.projects);
     } catch (err) {
       console.error("❌ Error fetching projects:", err);
     }
   }
 
-  // Render project cards
+  // Render project cards (Bootstrap grid only)
   function renderProjects(projects) {
     const container = document.getElementById("projectContainer");
     if (!container) {
@@ -625,10 +610,9 @@
 
     container.innerHTML = projects
       .map((project) => {
-        const categoryClass = mapCategoryToClass(project.category);
         const imageUrl = `https://api.nweaverarchitect.in/${project.image_url}`;
         return `
-          <div class="masonry-item ${categoryClass} col-xl-3 col-lg-4 col-md-6 m-b30">
+          <div class="col-xl-3 col-lg-4 col-md-6 m-b30">
             <div class="project-new-2">
               <div class="wt-img-effect">
                 <img src="${imageUrl}" alt="${project.title}" style="width: 100%; height: auto;" />
@@ -646,33 +630,9 @@
       .join("");
   }
 
-  // Handle category filters
-  document.addEventListener("DOMContentLoaded", () => {
-    fetchProjects();
-
-    document.querySelectorAll(".masonry-filter a").forEach((filterLink) => {
-      filterLink.addEventListener("click", (e) => {
-        e.preventDefault();
-        document.querySelectorAll(".masonry-filter li").forEach((li) =>
-          li.classList.remove("active")
-        );
-        filterLink.parentElement.classList.add("active");
-
-        const filter = filterLink.getAttribute("data-filter");
-
-        if (filter === "*") {
-          renderProjects(allProjects);
-        } else {
-          const filtered = allProjects.filter((project) => {
-            const categoryClass = mapCategoryToClass(project.category);
-            return `.${categoryClass}` === filter;
-          });
-          renderProjects(filtered);
-        }
-      });
-    });
-  });
+  document.addEventListener("DOMContentLoaded", fetchProjects);
 </script>
+
 
   </body>
 
