--- a/project.html
+++ b/project.html
@@ -597,38 +597,40 @@
 
   // Render project cards (Bootstrap grid only)
   function renderProjects(projects) {
-    const container = document.getElementById("projectContainer");
-    if (!container) {
-      console.error("❌ #projectContainer not found.");
-      return;
-    }
+  const container = document.getElementById("projectContainer");
+  if (!container) return;
 
-    if (projects.length === 0) {
-      container.innerHTML = `<p class="text-center text-muted">No projects found.</p>`;
-      return;
-    }
+  if (projects.length === 0) {
+    container.innerHTML = `<p class="text-center text-muted">No projects found.</p>`;
+    return;
+  }
 
-    container.innerHTML = projects
-      .map((project) => {
-        const imageUrl = `https://api.nweaverarchitect.in/${project.image_url}`;
-        return `
-          <div class="col-xl-3 col-lg-4 col-md-6 m-b30">
-            <div class="project-new-2">
-              <div class="wt-img-effect">
-                <img src="${imageUrl}" alt="${project.title}" style="width: 100%; height: auto;" />
-              </div>
-              <div class="project-new-content">
-                <h3 class="wt-title">
-                  <a href="project-single.html">${project.title}</a>
-                </h3>
-                <p>${project.description}</p>
-              </div>
+  container.innerHTML = projects
+    .map((project) => {
+      const imageUrl = `https://api.nweaverarchitect.in/${project.image_url}`;
+      return `
+        <div class="masonry-item cat-1 col-xl-3 col-lg-4 col-md-6 m-b30">
+          <div class="project-new-2">
+            <div class="wt-img-effect">
+              <img src="${imageUrl}" alt="${project.title}" style="width: 100%; height: auto;" />
+            </div>
+            <div class="project-new-content">
+              <h3 class="wt-title">
+                <a href="project-single.html">${project.title}</a>
+              </h3>
+              <p>${project.description}</p>
             </div>
           </div>
-        `;
-      })
-      .join("");
-  }
+        </div>
+      `;
+    })
+    .join("");
+
+  // re-init isotope after content load
+  setTimeout(() => {
+    jQuery(container).isotope("reloadItems").isotope();
+  }, 200);
+}
 
   document.addEventListener("DOMContentLoaded", fetchProjects);
 </script>
